Bug 22590 - libX11 1.2.1 has broken abstract namespace support
Summary: libX11 1.2.1 has broken abstract namespace support
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xlib (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: low minor
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2009-07-01 11:23 UTC by Paul Bender
Modified: 2010-06-03 17:10 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
abstract sockets fix (1001 bytes, patch)
2009-07-01 11:23 UTC, Paul Bender
no flags Details | Splinter Review

Description Paul Bender 2009-07-01 11:23:24 UTC
Created attachment 27302 [details] [review]
abstract sockets fix

While abstract namespace sockets worked in libX11 1.1.x, they do not work in libX11 1.2.x.

As far as a can tell, abstract namespace sockets require 'local' which has been abstracted as the define LOCAL_TRANS and neither defined nor enabled when Linux is used and Unix sockets are enabled. The attached patch fixes this.
Comment 1 Alan Coopersmith 2010-06-03 17:10:31 UTC
Fix applied & included in libX11 1.3.4 release.  Thanks for the bug 
report and sorry for taking so long to process.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.