Bug 22590 - libX11 1.2.1 has broken abstract namespace support

https://bugs.freedesktop.org/show_bug.cgi?id=22590

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>